--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -9,7 +9,7 @@
     <div class="panel-body">
         <h4>{% translate "Your Most Recent FATs" %}</h4>
 
-        <p>{% translate "Only charaters that have recent FATs are shown. <small>(latest 10 FATs per character)</small>" %}</p>
+        <p>{% translate "Only characters that have recent FATs are shown. <small>(latest 10 FATs per character)</small>" %}</p>
 
         {% if characters %}
             <ul class="nav nav-pills">
