--- a/afat/templates/afat/view/fatlinks/fatlinks_overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_overview.html
@@ -1,6 +1,7 @@
 {% extends 'afat/base.html' %}
 
 {% load static %}
+{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
@@ -55,8 +56,8 @@
 {% block extra_css %}
     {% include 'bundles/datatables-css.html' %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/allianceauth-afat.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
 {% endblock %}
 
 {% block extra_javascript %}
@@ -66,7 +67,7 @@
     <script type="application/javascript" src="{% static 'afat/libs/datatables/plugins/dataTables.rowGroup.min.js' %}"></script>
     <script type="application/javascript" src="{% static 'afat/libs/datatables/plugins/datetime.min.js' %}"></script>
     <script type="application/javascript" src="{% static 'js/filterDropDown/filterDropDown.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
+    <script type="application/javascript" src="{% afat_static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
 
     <script type="application/javascript">
         let afatSettings = {
@@ -94,5 +95,5 @@
             }
         }
     </script>
-    <script type="application/javascript" src="{% static 'afat/javascript/afat-fatlist.min.js' %}"></script>
+    <script type="application/javascript" src="{% afat_static 'afat/javascript/afat-fatlist.min.js' %}"></script>
 {% endblock %}
