--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -1,6 +1,6 @@
 {% extends 'afat/base.html' %}
 
-{% load static %}
+{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
@@ -35,12 +35,12 @@
 {% block extra_css %}
     {% include 'bundles/datatables-css.html' %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/allianceauth-afat.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
 {% endblock %}
 
 {% block extra_javascript %}
-    <script type="application/javascript" src="{% static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
+    <script type="application/javascript" src="{% afat_static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
 
     {% include 'bundles/datatables-js.html' %}
     {% include 'bundles/clipboard-js.html' %}
@@ -65,5 +65,5 @@
             reloadDatatable: {{ link_ongoing|yesno:"true,false" }}
         }
     </script>
-    <script type="application/javascript" src="{% static 'afat/javascript/afat-fatlink-details.min.js' %}"></script>
+    <script type="application/javascript" src="{% afat_static 'afat/javascript/afat-fatlink-details.min.js' %}"></script>
 {% endblock %}
