--- a/afat/templates/afat/view/statistics/statistics_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_overview.html
@@ -1,6 +1,6 @@
 {% extends 'afat/base.html' %}
 
-{% load static %}
+{% load afat_versioned_static %}
 {% load i18n %}
 {% load evelinks %}
 {% load filters %}
@@ -32,6 +32,6 @@
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'afat/css/allianceauth-afat.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
 {% endblock %}
