--- a/afat/templates/afat/partials/statistics/overview/tabs_navigation.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs_navigation.html
@@ -3,7 +3,7 @@
 <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#mine">{% translate "My Stats" %}</a></li>
 
-    {% if perms.afat.stats_corporation_own or perms.afat.stats_corporation_other %}
+    {% if perms.afat.stats_corporation_own or perms.afat.stats_corporation_other or perms.afat.manage_afat %}
         <li><a data-toggle="tab" href="#corps">{% translate "Corps" %}</a></li>
     {% endif %}
 </ul>
