--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -21,11 +21,11 @@
 
     <p>&nbsp;</p>
 
-    {% include "afat/partials/fatlinks/details/tabs_navigation.html" %}
+{#    {% include "afat/partials/fatlinks/details/tabs_navigation.html" %}#}
 
     <div class="tab-content">
         {% include "afat/partials/fatlinks/details/tabs/fats.html" %}
-        {% include "afat/partials/fatlinks/details/tabs/manualfat.html" %}
+{#        {% include "afat/partials/fatlinks/details/tabs/manualfat.html" %}#}
     </div>
 
     {% translate "Delete FAT" as translated_title %}
