--- a/afat/templates/afat/bundles/chartjs-js.html
+++ b/afat/templates/afat/bundles/chartjs-js.html
@@ -1,3 +1,3 @@
-{% load static %}
+{% load afat_versioned_static %}
 
-<script type="application/javascript" src="{% static 'afat/libs/Chart.js/2.7.2/Chart.min.js' %}"></script>
+<script type="application/javascript" src="{% afat_static 'afat/libs/chartjs/chart.min.js' %}"></script>
