--- a/afat/templates/afat/view/dashboard/dashboard.html
+++ b/afat/templates/afat/view/dashboard/dashboard.html
@@ -1,8 +1,6 @@
 {% extends 'afat/base.html' %}
 
 {% load evelinks %}
-{% load static %}
-{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
@@ -31,19 +29,15 @@
 
 {% block extra_css %}
     {% include 'bundles/datatables-css.html' %}
-
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
+    {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
     {% include 'bundles/datatables-js.html' %}
     {% include 'bundles/moment-js.html' with locale=True %}
+    {% include "afat/bundles/afat-js.html" %}
 
-    <script type="application/javascript" src="{% static 'afat/libs/datatables/plugins/datetime.min.js' %}"></script>
-    <script type="application/javascript" src="{% afat_static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
-
-    <script type="application/javascript">
+    <script>
         let afatSettings = {
             url: {
                 characterFats: '{% url "afat:dashboard_ajax_get_recent_fats_by_character" 0 %}',
@@ -70,5 +64,5 @@
         }
     </script>
 
-    <script type="application/javascript" src="{% afat_static 'afat/javascript/afat-dashboard.min.js' %}"></script>
+    {% include "afat/bundles/afat-dashboard-js.html" %}
 {% endblock %}
