--- a/afat/templates/afat/bundles/chartjs-js.html
+++ b/afat/templates/afat/bundles/chartjs-js.html
@@ -1,3 +1,3 @@
 {% load afat_versioned_static %}
 
-<script type="application/javascript" src="{% afat_static 'afat/libs/chartjs/chart.min.js' %}"></script>
+<script src="{% afat_static 'afat/libs/Chart.js/2.7.2/chart.min.js' %}"></script>
