--- a/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
@@ -18,7 +18,7 @@
 
                     <canvas id="ship-pie" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let shipPieChart = new Chart(document.getElementById("ship-pie"), {
                             type: "pie",
                             data: {
@@ -44,7 +44,7 @@
 
                     <canvas id="time-line" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let timeLineChart = new Chart(document.getElementById("time-line"), {
                             type: 'line',
                             data: {
@@ -71,7 +71,7 @@
 
                     <canvas id="weekday-line" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let weekdayLineChart = new Chart(document.getElementById('weekday-line'), {
                             type: 'line',
                             data:{
@@ -98,7 +98,7 @@
 
                     <canvas id="avgs" width="1000" height="700"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let averagesHorizontalBarChart = new Chart(document.getElementById('avgs'), {
                             type: 'horizontalBar',
                             data:{
