--- a/afat/templates/afat/partials/statistics/character/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/graphs.html
@@ -7,7 +7,7 @@
 
             <canvas style="width: 400px; max-width: 100%; height: 400px;" id="pie-ship"></canvas>
 
-            <script type="application/javascript">
+            <script>
                 let shipPieChart = new Chart(document.getElementById("pie-ship"), {
                     type: "pie",
                     data: {
@@ -29,7 +29,7 @@
 
             <canvas style="width: 100%; height: 400px;" id="line-time"></canvas>
 
-            <script type="application/javascript">
+            <script>
                 let FATLineChart = new Chart(document.getElementById("line-time"),{
                     type: "line",
                     data: {
