--- a/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
@@ -15,7 +15,7 @@
 
                     <canvas id="ship-bar-stacked" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let corpShipTypeBarChart = new Chart(document.getElementById('ship-bar-stacked'), {
                             type: "bar",
                             data: {
@@ -53,7 +53,7 @@
 
                     <canvas id="time-line" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let timeLineChart = new Chart(document.getElementById("time-line"), {
                             type: 'line',
                             data: {
@@ -78,7 +78,7 @@
 
                     <canvas id="weekday-line" width="800" height="500"></canvas>
 
-                    <script type="application/javascript">
+                    <script>
                         let weekdayLineChart = new Chart(document.getElementById('weekday-line'), {
                             type: 'line',
                             data:{
