--- a/afat/templates/afat/view/fatlinks/fatlinks_add_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_add_fatlink.html
@@ -1,6 +1,5 @@
 {% extends 'afat/base.html' %}
 
-{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
@@ -20,13 +19,13 @@
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
+    {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
-    <script type="application/javascript" src="{% afat_static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
-    <script type="application/javascript">
+    {% include "afat/bundles/afat-js.html" %}
+
+    <script>
         $(document).ready(function () {
             let cancelEsiFleetModal = $('#cancelEsiFleetModal');
 
