--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -1,6 +1,5 @@
 {% extends 'afat/base.html' %}
 
-{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
@@ -34,18 +33,15 @@
 
 {% block extra_css %}
     {% include 'bundles/datatables-css.html' %}
-
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
+    {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
-    <script type="application/javascript" src="{% afat_static 'afat/javascript/allianceauth-afat.min.js' %}"></script>
-
+    {% include "afat/bundles/afat-js.html" %}
     {% include 'bundles/datatables-js.html' %}
     {% include 'bundles/clipboard-js.html' %}
 
-    <script type="application/javascript">
+    <script>
         let afatSettings = {
             url: '{% url "afat:fatlinks_ajax_get_fats_by_fatlink" 0 %}'.replace(
                     '0',
@@ -65,5 +61,6 @@
             reloadDatatable: {{ link_ongoing|yesno:"true,false" }}
         }
     </script>
-    <script type="application/javascript" src="{% afat_static 'afat/javascript/afat-fatlink-details.min.js' %}"></script>
+
+    {% include "afat/bundles/afat-fatlink-details-js.html" %}
 {% endblock %}
