--- a/afat/templates/afat/view/statistics/statistics_corporation.html
+++ b/afat/templates/afat/view/statistics/statistics_corporation.html
@@ -1,7 +1,5 @@
 {% extends 'afat/base.html' %}
 
-{% load static %}
-{% load afat_versioned_static %}
 {% load i18n %}
 
 {% block page_title %}{{ corporation }} {% translate "Statistics" %}{% endblock %}
@@ -41,16 +39,14 @@
 
 {% block extra_css %}
     {% include 'bundles/datatables-css.html' %}
-
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
+    {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
     {% include 'bundles/datatables-js.html' %}
     {% include 'bundles/moment-js.html' %}
 
-    <script type="application/javascript">
+    <script>
         /**
          * datetime formatting
          *
