--- a/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
@@ -1,6 +1,5 @@
 {% extends 'afat/base.html' %}
 
-{% load afat_versioned_static %}
 {% load i18n %}
 {% load filters %}
 
@@ -61,6 +60,5 @@
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/aa-bootstrap-fix.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% afat_static 'afat/css/allianceauth-afat.min.css' %}">
+    {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
