--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -1,7 +1,7 @@
 @media all {
     .btn-afat-action {
-        margin: 0 0.25rem;
         height: 35px;
+        margin: 0 0.25rem;
         width: 35px;
     }
 
@@ -92,8 +92,7 @@
         font-size: 19px;
         font-weight: 400;
         line-height: 1.1;
-        margin-top: 10.5px;
-        margin-bottom: 10.5px;
+        margin: 10.5px 0;
     }
 }
 
