[MISC] Template fixes
» Unified quotation mark style
» `&nbsp;` is not for styling

--- a/afat/templates/afat/partials/fatlinks/add/clickable_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/clickable_link.html
@@ -26,7 +26,7 @@
 
                 {{ manual_fatlink_form.duration|bootstrap }}
 
-                {% include 'afat/partials/form/required_field_hint.html' %}
+                {% include "afat/partials/form/required_field_hint.html" %}
 
                 <div class="form-group text-right">
                     <button class="btn btn-primary" type="submit" name="submit_click">
