--- a/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
@@ -2,7 +2,7 @@
 
 <div class="col-md-12">
     <div class="row">
-        <form class="form" role="form" action="" method="POST">
+        <form class="form" role="form" action="" method="POST" style="margin-bottom: 2rem;">
             {% csrf_token %}
             <div class="row">
                 <div class="col-md-12">
@@ -16,7 +16,5 @@
                 </div>
             </div>
         </form>
-
-        <p>&nbsp;</p>
     </div>
 </div>
