--- a/afat/templates/afat/view/fatlinks/fatlinks_add_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_add_fatlink.html
@@ -1,8 +1,8 @@
-{% extends 'afat/base.html' %}
+{% extends "afat/base.html" %}
 
 {% load i18n %}
 
-{% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
+{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
 
 {% block afat_header %}
     <br>
