--- a/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
@@ -1,4 +1,4 @@
-{% extends 'afat/base.html' %}
+{% extends "afat/base.html" %}
 
 {% load i18n %}
 {% load filters %}
@@ -13,9 +13,9 @@
 {% endblock %}
 
 {% block afat_body %}
-    {% url 'afat:statistics_alliance' allianceid year_prev as url_previous_year %}
-    {% url 'afat:statistics_alliance' allianceid year_next as url_next_year %}
-    {% url 'afat:statistics_alliance' allianceid year_current as url_current_year %}
+    {% url "afat:statistics_alliance" allianceid year_prev as url_previous_year %}
+    {% url "afat:statistics_alliance" allianceid year_next as url_next_year %}
+    {% url "afat:statistics_alliance" allianceid year_current as url_current_year %}
     {% include "afat/partials/year_navigation.html" with url_previous_year=url_previous_year url_next_year=url_next_year url_current_year=url_current_year %}
 
     <div class="panel panel-default">
@@ -45,7 +45,7 @@
                             {% endif %}
 
                             <td class="text-right">
-                                {% if alliance != 'No Alliance' %}
+                                {% if alliance != "No Alliance" %}
                                     <a href="{% url 'afat:statistics_alliance' allianceid year month.0 %}" class="btn btn-primary btn-sm">
                                         <span class="glyphicon glyphicon-eye-open"></span>
                                     </a>
