--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -1,8 +1,8 @@
-{% extends 'allianceauth/base.html' %}
+{% extends "allianceauth/base.html" %}
 
 {% load i18n %}
 
-{% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
+{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
 
 {% block content %}
     <div class="allianceauth-afat">
