--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -37,11 +37,11 @@
                             <table class="table table-striped table-hover" id="recent-fats-character-{{ character.character_id }}" style="width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th>{% translate 'Fleet Name' %}</th>
-                                        <th>{% translate 'Fleet Type' %}</th>
-                                        <th>{% translate 'Location' %}</th>
-                                        <th>{% translate 'Ship' %}</th>
-                                        <th>{% translate 'EVE Time' %}</th>
+                                        <th>{% translate "Fleet Name" %}</th>
+                                        <th>{% translate "Fleet Type" %}</th>
+                                        <th>{% translate "Location" %}</th>
+                                        <th>{% translate "Ship" %}</th>
+                                        <th>{% translate "EVE Time" %}</th>
                                     </tr>
                                 </thead>
 
