--- a/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
@@ -4,7 +4,7 @@
 {% if esi_fleet.has_open_esi_fleets %}
     <div class="alert alert-info">
         <p>
-            {% translate 'You currently have (an) active ESI fleet(s) under the following character(s):' %}<sup>*</sup>
+            {% translate "You currently have (an) active ESI fleet(s) under the following character(s):" %}<sup>*</sup>
         </p>
 
         <ul class="esi-fleet-list">
@@ -16,12 +16,13 @@
                         </div>
                         <div class="eve-image-text">
                             {{ open_esi_fleet.character.character_name }}<br>
-                            <small>(Fleet Name: {{ open_esi_fleet.fleet }} // ESI fleet ID: {{ open_esi_fleet.esi_fleet_id }})</small>
+                            <small>({% translate "Fleet Name:" %} {{ open_esi_fleet.fleet }} // {% translate "ESI fleet ID:" %} {{ open_esi_fleet.esi_fleet_id }})</small>
                         </div>
                     </div>
 
                     <div>
-                        <button class="btn btn-primary btn-xs"
+                        <button
+                            class="btn btn-primary btn-xs"
                             style="margin-left: 0.25rem;"
                             title="{% translate 'Clicking here will stop the automatic tracking through ESI for this fleet and close the associated FAT link.' %}"
                             data-toggle="modal"
@@ -31,7 +32,7 @@
                             data-confirm-text="{% translate 'Stop Tracking' %}"
                         >
                             <i class="fas fa-times"></i>
-                            <!-- {% translate 'Stop Tracking' %} -->
+                            <!-- {% translate "Stop Tracking" %} -->
                         </button>
                     </div>
                 </li>
@@ -39,14 +40,14 @@
         </ul>
 
         <p>
-            {% translate 'These fleets are already automatically tracked. However, you can still open more fleets with other alts, if that&apos;s what you like to do.' %}
+            {% translate "These fleets are already automatically tracked. However, you can still open more fleets with other alts, if that&apos;s what you like to do." %}
         </p>
 
         <p>
-            (<small><sup>(*)</sup> {% translate 'Note: Information about your registered fleets might be delayed by up to 5 minutes.' %})</small>
+            (<small><sup>(*)</sup> {% translate "Note: Information about your registered fleets might be delayed by up to 5 minutes." %})</small>
         </p>
     </div>
 
     {% translate "Close ESI Fleet Tracking" as translated_title %}
-    {% include 'afat/modals/general.html' with modal_name='cancelEsiFleet' modal_title=translated_title confirm_button_class='btn-danger' %}
+    {% include "afat/modals/general.html" with modal_name="cancelEsiFleet" modal_title=translated_title confirm_button_class="btn-danger" %}
 {% endif %}
