--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -1,8 +1,8 @@
-{% extends 'afat/base.html' %}
+{% extends "afat/base.html" %}
 
 {% load i18n %}
 
-{% block page_title %}{% translate 'Fleet Activity' %}{% endblock %}
+{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
 
 {% block afat_header %}
     <br>
@@ -17,9 +17,6 @@
     {% endif %}
 
     {% include "afat/partials/fatlinks/details/fatlink_info.html" %}
-
-    <p>&nbsp;</p>
-
     {% include "afat/partials/fatlinks/details/tabs_navigation.html" %}
 
     <div class="tab-content">
@@ -32,14 +29,14 @@
 {% endblock %}
 
 {% block extra_css %}
-    {% include 'bundles/datatables-css.html' %}
+    {% include "bundles/datatables-css.html" %}
     {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
     {% include "afat/bundles/afat-js.html" %}
-    {% include 'bundles/datatables-js.html' %}
-    {% include 'bundles/clipboard-js.html' %}
+    {% include "bundles/datatables-js.html" %}
+    {% include "bundles/clipboard-js.html" %}
 
     <script>
         let afatSettings = {
