[FIX] Show FAT Link register link only for clickable FAT links

--- a/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
@@ -67,7 +67,7 @@
             {% endif %}
         </div>
 
-        {% if link_ongoing %}
+        {% if is_clickable_link and link_ongoing %}
             <div class="col-md-12">
                 <p>{% translate "FAT Link:" %}
                     <i>
