--- a/afat/templates/afat/partials/statistics/overview/tabs/corps.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corps.html
@@ -3,9 +3,11 @@
 
 <div id="corps" class="tab-pane fade panel panel-default">
     <div class="panel-body">
-        <h4>{% translate "Corporations <small>(Click on an alliance name to see their corporations)</small>" %}</h4>
+        {% if user_can_see_other_corps %}
+            <h4>{% translate "Corporations <small>(Click on an alliance name to see their corporations)</small>" %}</h4>
+        {% endif %}
 
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="margin-bottom: 0;">
             {% if perms.afat.stats_corporation_other or perms.afat.manage_afat %}
                 {% for key, value in data.items|dictsort:0 %}
                     {% if value|length > 0 %}
@@ -28,7 +30,7 @@
 
                             <div id="{{ value.0 }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ value.0 }}">
                                 <div class="panel-body">
-                                    <table class="table table-striped table-hover">
+                                    <table class="table table-striped table-hover" style="margin-bottom: 0;">
                                         <tbody>
                                             {% for corp in value %}
                                                 {% if forloop.first %}
@@ -55,13 +57,14 @@
                     {% endif %}
                 {% endfor %}
             {% elif perms.afat.stats_corporation_own %}
-                <table class="table table-striped table-hover">
+                <table class="table table-striped table-hover" style="margin-bottom: 0;">
                     <tbody>
                         <tr>
                             <td>
                                 <img src="{{ data.0.0|corporation_logo_url:32 }}" alt="{{ data.0.1 }}" style="margin-right: 0.25rem;">
                                 {{ data.0.1 }}
                             </td>
+
                             <td class="text-right">
                                 <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' data.0.0 year %}">
                                     <span class="glyphicon glyphicon-eye-open"></span>
