[CHANGE] Use modern rgb notation

--- a/afat/templates/afat/partials/statistics/overview/tabs/corps.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corps.html
@@ -22,7 +22,7 @@
 
                                     {% if key != 'No Alliance' %}
                                         <a class="btn btn-primary btn-sm pull-right" href="{% url 'afat:statistics_alliance' value.0 year %}" role="button">
-                                            <span class="glyphicon glyphicon-eye-open" style="color: rgb(255,255,255);"></span>
+                                            <span class="glyphicon glyphicon-eye-open" style="color: rgb(255 255 255);"></span>
                                         </a>
                                     {% endif %}
                                 </h4>
