--- a/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
@@ -4,11 +4,11 @@
 {% if esi_fleet.has_open_esi_fleets %}
     <div class="alert alert-info">
         <p>
-            {% blocktrans count esi_fleet.open_esi_fleets_list|length as open_esi_fleets %}
+            {% blocktranslate count esi_fleet.open_esi_fleets_list|length as open_esi_fleets %}
                 You currently have {{ open_esi_fleets }} active ESI fleet under the following character:
             {% plural %}
                 You currently have {{ open_esi_fleets }} active ESI fleets under the following characters:
-            {% endblocktrans %}
+            {% endblocktranslate %}
 
             <sup>*</sup>
         </p>
