[CHANGE] Since we use the right plural-form now …

--- a/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
@@ -5,7 +5,7 @@
     <div class="alert alert-info">
         <p>
             {% blocktranslate count esi_fleet.open_esi_fleets_list|length as open_esi_fleets %}
-                You currently have {{ open_esi_fleets }} active ESI fleet under the following character:
+                You currently have an active ESI fleet under the following character:
             {% plural %}
                 You currently have {{ open_esi_fleets }} active ESI fleets under the following characters:
             {% endblocktranslate %}
