[CHANGE] No need to translate a colons (`:`)

--- a/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="eve-image-text">
                             {{ open_esi_fleet.character.character_name }}<br>
-                            <small>({% translate "Fleet Name:" %} {{ open_esi_fleet.fleet }} // {% translate "ESI fleet ID:" %} {{ open_esi_fleet.esi_fleet_id }})</small>
+                            <small>({% translate "Fleet Name" %}: {{ open_esi_fleet.fleet }} // {% translate "ESI fleet ID" %}: {{ open_esi_fleet.esi_fleet_id }})</small>
                         </div>
                     </div>
 
