--- a/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
@@ -3,20 +3,20 @@
 <div class="col-md-12" style="margin-bottom: 2rem;">
     <div class="row">
         <div class="col-md-6">
-            {% translate "Creator:" %} {{ link.creator.profile.main_character.character_name }}
+            {% translate "Creator" %}: {{ link.creator.profile.main_character.character_name }}
         </div>
 
         <div class="col-md-6 text-right">
             <p>
-                {% translate "Link Created (Eve Time):" %} {{ link.afattime|date:"d. F Y H:i" }}
+                {% translate "Link Created (Eve Time)" %}: {{ link.afattime|date:"d. F Y H:i" }}
 
                 {% if link_expires %}
                     <br>
 
                     {% if link_ongoing %}
-                        {% translate "Link Expires (Eve Time):" %}
+                        {% translate "Link Expires (Eve Time)" %}:
                     {% else %}
-                        {% translate "Link Expired (Eve Time):" %}
+                        {% translate "Link Expired (Eve Time)" %}:
                     {% endif %}
 
                     {{ link_expires|date:"d. F Y H:i" }}
@@ -69,7 +69,7 @@
 
         {% if is_clickable_link and link_ongoing %}
             <div class="col-md-12">
-                <p>{% translate "FAT Link:" %}
+                <p>{% translate "FAT Link" %}:
                     <i>
                         {{ SITE_URL }}{% url 'afat:fatlinks_add_fat' link.hash %}
                         <a class="label label-success copy-link" href="{% url 'afat:fatlinks_add_fat' link.hash %}"></a>
