--- a/afat/templates/afat/partials/fatlinks/details/tabs/manualfat.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/manualfat.html
@@ -8,7 +8,7 @@
             <p>
                 {% translate "Is someone missing from the list of FATs? Use this form to add them." %}
                 <br>
-                <strong>{% translate "Note:" %}</strong> {% translate "This action is logged!" %}
+                <strong>{% translate "Note" %}:</strong> {% translate "This action is logged!" %}
             </p>
 
             <form class="form" role="form" action="" method="POST">
