--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -4,7 +4,7 @@
 <div class="tab-pane fade in panel panel-default" id="members">
     <div class="panel-body">
         <h3>
-            {{ alliance }} {% translate "Member Corps" %}
+            {{ alliance }} {% translate "Member Corporations" %}
         </h3>
 
         <table class="table table-striped table-hover" id="member-corps" style="width: 100%;">
