--- a/afat/templates/afat/partials/statistics/overview/tabs_navigation.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs_navigation.html
@@ -4,6 +4,6 @@
     <li class="active"><a data-toggle="tab" href="#mine">{% translate "My Stats" %}</a></li>
 
     {% if perms.afat.stats_corporation_own or perms.afat.stats_corporation_other or perms.afat.manage_afat %}
-        <li><a data-toggle="tab" href="#corps">{% translate "Corps" %}</a></li>
+        <li><a data-toggle="tab" href="#corps">{% translate "Corporations" %}</a></li>
     {% endif %}
 </ul>
