[ADD] Footer to promote help with the app translation

--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -50,6 +50,17 @@
     .allianceauth-afat .esi-fleet-list-item .eve-character-portrait {
         margin-right: 0.5rem;
     }
+
+    .allianceauth-afat-footer {
+        border-top: 1px solid rgb(236 240 241);
+        font-size: 85%;
+        margin-top: 1rem;
+        padding-top: 1rem;
+    }
+
+    .template-dark-mode .allianceauth-afat-footer {
+        border-color: rgb(70 69 69);
+    }
 }
 
 /* tables
