--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -13,5 +13,9 @@
         <div class="allianceauth-afat-body">
             {% block afat_body %}{% endblock %}
         </div>
+
+        <div class="allianceauth-afat-footer">
+            {% include "afat/partials/footer/app-translation-footer.html" %}
+        </div>
     </div>
 {% endblock %}
