[MISC] pre-commit, linting and source-maps

--- a/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
@@ -30,7 +30,7 @@
                 <thead>
                     <tr>
                         <th>{% translate "Ship Type" %}</th>
-                        <th class="text-right">{% translate "Numbers" %}</th>
+                        <th class="text-right">{% translate "Count" %}</th>
                     </tr>
                 </thead>
 
